--- a/.github/workflows/e1.yaml
+++ b/.github/workflows/e1.yaml
@@ -2,7 +2,7 @@ name: Ga-1
 on: push
 jobs:
   job1:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
      - name: step1
        run: echo "hello Ga1"
