--- a/.github/workflows/e1.yaml
+++ b/.github/workflows/e1.yaml
@@ -5,4 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - name: step1
-       run: echo "hello Ga1"
+       run: |
+          echo "hello Ga1"
+          pwd
+          ls -l
+          hostnamectl
