--- a/.github/workflows/e1.yaml
+++ b/.github/workflows/e1.yaml
@@ -15,7 +15,7 @@ jobs:
        run : |
           wc -l /etc/passwd
           echo $USER 
-          useradd -m sheshivardhan
+          sudo useradd -m sheshivardhan
           sudo su sheshivardhan
           id
           
