--- a/.github/workflows/e1.yaml
+++ b/.github/workflows/e1.yaml
@@ -17,6 +17,8 @@ jobs:
           echo $USER 
           sudo useradd -m sheshivardhan
           wc -l /etc/passwd
+          sudo su sheshivardhan
+          id 
           head -n 4 /etc/passwd
           
           
